# rwkv_Ascend

./: README.md
cann-ops-master/: .gitignore  OWNERS  README.md
cann-ops-master/.gitee/: ISSUE_TEMPLATE.zh-CN.md
cann-ops-master/.gitee/ISSUE_TEMPLATE/: bug-report.yml
cann-ops-master/cmake/: config.cmake
cann-ops-master/docs/contributors/: gitee-workflow.md
cann-ops-master/src/rwkv7/wkv7/: CMakeLists.txt
cann-ops-master/src/rwkv7/wkv7/CppExtensionInvocation/custom_ops.egg-info/: SOURCES.txt
cann-ops-master/src/rwkv7/wkv7/CppExtensionInvocation/test/: test_add_custom_graph.py
cann-ops-master/src/rwkv7/wkv7grad/: CMakeLists.txt
cann-ops-master/src/rwkv7/wkv7grad/framework/tf_plugin/: tensorflow_wkv7grad_plugin.cc
cann-ops-rwkv/: CMakeLists.txt  OAT.xml  README.md  build.sh
cann-ops-rwkv/.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
cann-ops-rwkv/.ipynb_checkpoints/: 命令-checkpoint.txt
cann-ops-rwkv/cmake/: func.cmake
cann-ops-rwkv/docs/: Contributing.md
cann-ops-rwkv/docs/contributors/: build-verf-mode1.md  build-verf-mode2.md
mindspore_rwkv/rwkv6/: main.py
mindspore_rwkv/rwkv7/: function_wkv7.cpp  main.py  model.py  model_v2.py  sampler.py  tokenizer.py
register_op_rwkv/CppExtensionInvocation/: README.md
register_op_rwkv/CppExtensionInvocation/csrc/: wkv7.cpp
rwkv7-acl/: README.md  infer_om_310B.py  infer_om_310P.py
rwkv7-acl/export/: README.md  amct_w8a8.sh  export.py
torch_rwkv/rwkv7/: main_rnn.py  model_rnn.py  sampler.py  tokenizer.py
transformers-ascend/: README.md
transformers-ascend/src/: test_prefill.py  test_v7.py
(+58 files in other folders)
